<resources>
    <string name="app_name">Criminal Intent Spring 22</string>
    <string name="detail_name">Criminal Intent {title}</string>
    <string name="title_hint">Describe the Crime</string>
    <string name="details">Details</string>
    <string name="solved">Solved</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="save_btn_text">Save Profile</string>
    <string name="date_picker_title">Select Crime Date</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>